[FEATURE] wrap helper functions to functional components

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -139,6 +139,7 @@
   "common.label.perDay": "per day",
   "common.label.perMonth": "per month",
   "common.label.perWeek": "per week",
+  "common.label.perYear": "per year",
   "common.label.points": "{points} points",
   "common.label.profileAdminTitle": "Profile",
   "common.label.profileBasic": "Basic",
@@ -153,10 +154,6 @@
   "common.label.selectInstructor": "Instructor",
   "common.label.sellingStatus": "Selling Status",
   "common.label.sessionTitle": "Session Title",
-  "common.label.shortenDay": "day",
-  "common.label.shortenMonth": "month",
-  "common.label.shortenWeek": "week",
-  "common.label.shortenYear": "year",
   "common.label.totalPrice": "Total",
   "common.label.totalSales": "Total",
   "common.label.unavailableSelling": "Unavailable Now",
@@ -185,6 +182,18 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.voucherPlans": "Voucher Plans",
+  "common.product.activityTicket": "Activity",
+  "common.product.appointmentPlan": "Appointment",
+  "common.product.card": "Card",
+  "common.product.merchandise": "Merchandise",
+  "common.product.podcastPlan": "Podcast",
+  "common.product.podcastProgram": "Podcast",
+  "common.product.program": "Program",
+  "common.product.programContent": "Program",
+  "common.product.programPackagePlan": "Program Package",
+  "common.product.programPlan": "Program",
+  "common.product.projectPlan": "Project",
+  "common.product.unknownType": "Unknown",
   "common.status.notComplete": "Not Complete",
   "common.status.orderFailed": "Failed",
   "common.status.orderRefund": "Refund",
@@ -194,7 +203,7 @@
   "common.status.unpublished": "Unpublished",
   "common.term.account": "Account",
   "common.term.activityTicket": "Activity Ticket",
-  "common.term.anonymous": "匿名使用者",
+  "common.term.anonymous": "Anonymous",
   "common.term.appOwner": "App Owner",
   "common.term.avatar": "Avatar",
   "common.term.card": "Membership Card",
@@ -231,7 +240,7 @@
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
-  "common.term.unknownRole": "未知身份",
+  "common.term.unknownRole": "Unknown Role",
   "common.term.username": "Username or Email",
   "common.text.checkEmailNotation": "Check email and change password.",
   "common.text.deleteCategoryNotation": "確定要刪除此類別？此動作無法復原",
@@ -401,6 +410,7 @@
   "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "No program issue",
+  "program.text.emptyContentMenu": "初次購買還沒有新的內容喔～",
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
   "program.text.enrolledSubscriptionCount": "Subscribed: {count}",
   "program.text.isPublishedNotation": "現在你的課程已經發佈，此課程並會出現在頁面上，學生將能購買此課程。",
