[FEATURE] update member admin modal with tabs

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -148,7 +148,7 @@
   "common.label.publishSettings": "Publish",
   "common.label.resetPassword": "Reset Password",
   "common.label.roleAdmin": "Role",
-  "common.label.roleSettigs": "Role Settings",
+  "common.label.roleSettigs": "Role",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.salesPlan": "Sales",
   "common.label.selectInstructor": "Instructor",
