[BUGFIX] creator selector with zoom user only

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -99,6 +99,7 @@
   "common.event.successfullySaved": "Saved",
   "common.event.successfullyUpdatePassword": "Password Updated",
   "common.isContentCreator": "Instructor",
+  "common.label.accountData": "Account",
   "common.label.adminBackstage": "Admin Backstage",
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
@@ -125,6 +126,7 @@
   "common.label.introduction": "Introduction",
   "common.label.isAppOwner": "Administrator",
   "common.label.lastLogin": "Last Login",
+  "common.label.memberLog": "Log",
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
   "common.label.newPassword": "New Password",
@@ -162,6 +164,7 @@
   "common.label.week": "week",
   "common.label.year": "year",
   "common.label.yourNotification": "Your Notifications",
+  "common.label.zoomBinding": "Connect to Zoom",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.appointmentAdmin": "Appointment",
