[FEATURE] add modal of exporting orders

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -7,7 +7,7 @@
   "activity.label.settings": "Settings",
   "activity.label.showParticipantsNumber": "Show Participants Count",
   "activity.label.ticketEndedAt": "Ticket End Time",
-  "activity.label.ticketStartedAt": "Ticket Starting Time",
+  "activity.label.ticketStartedAt": "Ticket Start Time",
   "activity.status.aboutToStart": "About to Start",
   "activity.status.draft": "Draft",
   "activity.status.expired": "Expired",
@@ -70,7 +70,7 @@
   "appointment.term.period": "Period",
   "appointment.term.periodType": "Period Type",
   "appointment.term.planTitle": "Title",
-  "appointment.term.startedAt": "Starting Time",
+  "appointment.term.startedAt": "Start Time",
   "appointment.text.durationTips": "設定單次預約服務的時間長度",
   "appointment.text.noDuration": "No duration.",
   "appointment.text.noListPrice": "No list price.",
@@ -79,7 +79,7 @@
   "appointment.text.noTitle": "No plan title.",
   "appointment.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "appointment.text.publishedNotation": "預約方案已經發佈，學生將能購買預約。",
-  "appointment.text.selectStartedAt": "starting time",
+  "appointment.text.selectStartedAt": "start time",
   "appointment.text.unpublishedNotation": "預約方案未發佈，此方案並不會顯示在頁面上，學生也不能購買此方案。",
   "appointment.ui.addToCalendar": "Add to Calendar",
   "appointment.ui.close": "Close",
@@ -91,6 +91,7 @@
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
   "appointmnet.ui.appointmentText": "{name} made an appointment to {title}",
+  "commom.ui.exportOrderProduct": "Export Items",
   "common.event.loadAppError": "無法取得應用程式",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
@@ -117,6 +118,7 @@
   "common.label.confirmPassword": "Confirm Password",
   "common.label.consumption": "Consumption",
   "common.label.currentPassword": "Current Password",
+  "common.label.dateRange": "Date Range",
   "common.label.day": "day",
   "common.label.discountDownPrice": "Discount Down Price",
   "common.label.draft": "Draft",
@@ -124,6 +126,9 @@
   "common.label.goToLogin": "Login",
   "common.label.holdingPoints": "Points",
   "common.label.introduction": "Introduction",
+  "common.label.invoiceEmail": "Invoice Email",
+  "common.label.invoiceName": "Invoice Name",
+  "common.label.invoicePhone": "Invoice Phone",
   "common.label.isAppOwner": "Administrator",
   "common.label.lastLogin": "Last Login",
   "common.label.memberLog": "Log",
@@ -133,10 +138,23 @@
   "common.label.newPasswordAgain": "new password again",
   "common.label.notMember": "Not a member?",
   "common.label.optional": "Optional",
+  "common.label.orderDiscountId": "Discount ID",
+  "common.label.orderDiscountName": "Discount Name",
+  "common.label.orderDiscountPrice": "Discount Price",
+  "common.label.orderDiscountPriceTotal": "Discount Total",
+  "common.label.orderDiscountType": "Discount Type",
   "common.label.orderLogDate": "Order Date",
   "common.label.orderLogId": "Order ID",
+  "common.label.orderLogMemberEmail": "Member Email",
+  "common.label.orderLogMemberName": "Member Name",
   "common.label.orderLogPrice": "Order Price",
+  "common.label.orderLogPriceTotal": "Order Total",
   "common.label.orderLogStatue": "Order Status",
+  "common.label.orderProductAutoRenew": "Auto Renew",
+  "common.label.orderProductId": "Product ID",
+  "common.label.orderProductName": "Product Name",
+  "common.label.orderProductPrice": "Product Price",
+  "common.label.orderProductPriceTotal": "Product Total",
   "common.label.outdated": "Outdated",
   "common.label.perDay": "per day",
   "common.label.perMonth": "per month",
@@ -239,7 +257,7 @@
   "common.term.salePrice": "Sale Price",
   "common.term.shortDescription": "Short Description",
   "common.term.speciality": "Speciality",
-  "common.term.startedAt": "Starting Time",
+  "common.term.startedAt": "Start Time",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
@@ -281,6 +299,9 @@
   "common.ui.detail": "Detail",
   "common.ui.edit": "Edit",
   "common.ui.editPassword": "Edit Password",
+  "common.ui.exportOrder": "Export",
+  "common.ui.exportOrderDiscount": "Export Discounts",
+  "common.ui.exportOrderLog": "Export Orders",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.goTo": "Go to Tab",
   "common.ui.goToCart": "Go to Cart",
