[BUGFIX] fix csv format content and columns of order discounts

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -155,6 +155,7 @@
   "common.label.orderProductName": "Product Name",
   "common.label.orderProductPrice": "Product Price",
   "common.label.orderProductPriceTotal": "Product Total",
+  "common.label.orderProductType": "Product Type",
   "common.label.outdated": "Outdated",
   "common.label.perDay": "per day",
   "common.label.perMonth": "per month",
