[BUGFIX] update product type translation

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -208,7 +208,7 @@
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
   "common.product.merchandise": "Merchandise",
-  "common.product.podcastPlan": "Podcast",
+  "common.product.podcastPlan": "Podcast Channel",
   "common.product.podcastProgram": "Podcast",
   "common.product.program": "Program",
   "common.product.programContent": "Program",
