[FEATURE] add phone to creator on appointment plan

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -67,6 +67,7 @@
   "appointment.status.finished": "Finished",
   "appointment.status.isPublished": "Published",
   "appointment.status.notPublished": "Not Published",
+  "appointment.term.contactPhone": "聯絡手機",
   "appointment.term.period": "Period",
   "appointment.term.periodType": "Period Type",
   "appointment.term.planTitle": "Title",
@@ -206,6 +207,7 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.voucherPlans": "Voucher Plans",
+  "common.preview": "預覽內容",
   "common.product.activityTicket": "Activity",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
@@ -397,6 +399,7 @@
   "price.label.originalPrice": "Original Price",
   "price.label.perPeriods": "{amount} per {unit}",
   "price.label.second": "After",
+  "program-admin-page.header.dropdown.preview": "預覽簡介",
   "program.event.creatingBlock": "Creating Block",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
