[FEATURE] add table col: name and email

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -187,6 +187,7 @@
   "common.label.year": "year",
   "common.label.yourNotification": "Your Notifications",
   "common.label.zoomBinding": "Connect to Zoom",
+  "common.lable.nameAndEmail": "Name & Email",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.appointmentAdmin": "Appointment",
@@ -207,7 +208,6 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.voucherPlans": "Voucher Plans",
-  "common.preview": "預覽內容",
   "common.product.activityTicket": "Activity",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
@@ -399,7 +399,6 @@
   "price.label.originalPrice": "Original Price",
   "price.label.perPeriods": "{amount} per {unit}",
   "price.label.second": "After",
-  "program-admin-page.header.dropdown.preview": "預覽簡介",
   "program.event.creatingBlock": "Creating Block",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
