[FEATURE] add order's invoice info

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -127,9 +127,14 @@
   "common.label.goToLogin": "Login",
   "common.label.holdingPoints": "Points",
   "common.label.introduction": "Introduction",
+  "common.label.invoiceAddress": "Invoice Address",
+  "common.label.invoiceBuyerPhone": "Invoice Buyer Phone",
   "common.label.invoiceEmail": "Invoice Email",
   "common.label.invoiceName": "Invoice Name",
   "common.label.invoicePhone": "Invoice Phone",
+  "common.label.invoicePostCode": "Invoice Post Code",
+  "common.label.invoiceUniformNumber": "Invoice Uniform Number",
+  "common.label.invoiceUniformTitle": "Invoice Uniform Title",
   "common.label.isAppOwner": "Administrator",
   "common.label.lastLogin": "Last Login",
   "common.label.memberLog": "Log",
