[FEATURE] modify fields of order log and fix typo of translation keys

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -63,7 +63,7 @@
   "appointment.status.aboutToStart": "About to start",
   "appointment.status.available": "Available",
   "appointment.status.enrolled": "Enrolled",
-  "appointment.status.exlucded": "Closed",
+  "appointment.status.excluded": "Closed",
   "appointment.status.finished": "Finished",
   "appointment.status.isPublished": "Published",
   "appointment.status.notPublished": "Not Published",
@@ -83,6 +83,7 @@
   "appointment.text.selectStartedAt": "start time",
   "appointment.text.unpublishedNotation": "預約方案未發佈，此方案並不會顯示在頁面上，學生也不能購買此方案。",
   "appointment.ui.addToCalendar": "Add to Calendar",
+  "appointment.ui.appointmentText": "{name} made an appointment to {title}",
   "appointment.ui.close": "Close",
   "appointment.ui.createPlan": "Create Plan",
   "appointment.ui.editPeriod": "Edit Period",
@@ -91,8 +92,6 @@
   "appointment.ui.open": "Open",
   "appointment.ui.single": "Single",
   "appointment.warning.repetitiveMeta": "※ repeat period ",
-  "appointmnet.ui.appointmentText": "{name} made an appointment to {title}",
-  "commom.ui.exportOrderProduct": "Export Items",
   "common.event.loading": "Loading",
   "common.event.publishedSuccessfully": "Published Successfully",
   "common.event.publishingFailed": "Publishing Failed",
@@ -105,13 +104,13 @@
   "common.label.all": "All",
   "common.label.allActivityTicket": "All activities",
   "common.label.allMembers": "All Members",
-  "common.label.allMembershipCard": "All membershipcards",
+  "common.label.allMembershipCard": "All Membership Cards",
   "common.label.allMerchandise": "All merchandises",
   "common.label.allProgram": "All perpetual programs",
   "common.label.allProgramContent": "All program contents",
   "common.label.allProgramPlan": "All program plans",
   "common.label.alreadyMember": "Already a member?",
-  "common.label.baiscSettings": "Basic Settings",
+  "common.label.basicSettings": "Basic Settings",
   "common.label.cannotRecover": "The action cannot be recovered.",
   "common.label.caption": "Caption",
   "common.label.categoryItem": "Category Item",
@@ -129,10 +128,14 @@
   "common.label.introduction": "Introduction",
   "common.label.invoiceAddress": "Invoice Address",
   "common.label.invoiceBuyerPhone": "Invoice Buyer Phone",
+  "common.label.invoiceCarrier": "Invoice Carrier",
+  "common.label.invoiceDonationCode": "Invoice Donation Code",
   "common.label.invoiceEmail": "Invoice Email",
+  "common.label.invoiceId": "Invoice ID",
   "common.label.invoiceName": "Invoice Name",
   "common.label.invoicePhone": "Invoice Phone",
   "common.label.invoicePostCode": "Invoice Post Code",
+  "common.label.invoiceTarget": "Invoice Target",
   "common.label.invoiceUniformNumber": "Invoice Uniform Number",
   "common.label.invoiceUniformTitle": "Invoice Uniform Title",
   "common.label.isAppOwner": "Administrator",
@@ -141,6 +144,7 @@
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
   "common.label.name": "Name",
+  "common.label.nameAndEmail": "姓名和郵件地址",
   "common.label.newPassword": "New Password",
   "common.label.newPasswordAgain": "new password again",
   "common.label.notMember": "Not a member?",
@@ -177,7 +181,7 @@
   "common.label.publishSettings": "Publish",
   "common.label.resetPassword": "Reset Password",
   "common.label.roleAdmin": "Role",
-  "common.label.roleSettigs": "Role",
+  "common.label.roleSettings": "Role",
   "common.label.salePriceEndTime": "End Time of Sale",
   "common.label.salesPlan": "Sales",
   "common.label.selectInstructor": "Instructor",
@@ -192,7 +196,6 @@
   "common.label.year": "year",
   "common.label.yourNotification": "Your Notifications",
   "common.label.zoomBinding": "Connect to Zoom",
-  "common.lable.nameAndEmail": "Name & Email",
   "common.menu.activities": "Activities",
   "common.menu.activityAdmin": "Activity",
   "common.menu.appointmentAdmin": "Appointment",
@@ -287,15 +290,15 @@
   "common.text.sentResetPasswordMail": "已寄送重設密碼信",
   "common.text.shortDescriptionPlaceholder": "limit in 30 characters",
   "common.text.successfullyResetPasswordNotation": "已重設您的密碼，請回首頁並重新登入。",
-  "common.text.totalActualSalse": "實際銷售總額 {dollars} 元",
-  "common.text.totalActualSalseNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
+  "common.text.totalActualSales": "實際銷售總額 {dollars} 元",
+  "common.text.totalActualSalesNotation": "銷售總額 - 訂閱首期折扣 = 實際銷售總額",
   "common.text.totalCount": "{count} results",
   "common.ui.add": "Add",
   "common.ui.addCategory": "Add Category",
   "common.ui.addInstructor": "Add Instructor",
   "common.ui.addToCart": "Add to Cart",
   "common.ui.back": "Back",
-  "common.ui.backToHompage": "Back to homepage",
+  "common.ui.backToHomepage": "Back to HomePage",
   "common.ui.buyNow": "Buy",
   "common.ui.cancel": "Cancel",
   "common.ui.cancelOrder": "Cancel Order",
@@ -312,6 +315,7 @@
   "common.ui.exportOrder": "Export",
   "common.ui.exportOrderDiscount": "Export Discounts",
   "common.ui.exportOrderLog": "Export Orders",
+  "common.ui.exportOrderProduct": "Export Items",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.goTo": "Go to Tab",
   "common.ui.goToCart": "Go to Cart",
@@ -335,7 +339,7 @@
   "common.ui.search": "Search",
   "common.ui.sendEmailAgain": "Send Again",
   "common.ui.trial": "Trial",
-  "creator.label.creatorAppointemnts": "Appointment",
+  "creator.label.creatorAppointments": "Appointment",
   "creator.label.creatorPodcast": "Podcast Program",
   "creator.label.creatorPrograms": "Program",
   "error.data.fetch": "Loading Failed",
@@ -367,7 +371,6 @@
   "notification.term.notification": "Notification",
   "notification.ui.checkNotifications": "read more",
   "notification.ui.markAllAsRead": "Mark all as read",
-  "paodast.text.abstractLimit": "limit in 100 characters",
   "podcast.label.description": "Description",
   "podcast.label.duration": "Duration (minutes)",
   "podcast.label.plan": "Plan",
@@ -385,6 +388,7 @@
   "podcast.term.podcastAbstract": "Abstract",
   "podcast.term.podcastCover": "Cover",
   "podcast.term.podcastPlan": "Podcast Plan",
+  "podcast.text.abstractLimit": "limit in 100 characters",
   "podcast.text.audioFileTips": "Accept format: .mp3\nFile size: 5MB",
   "podcast.text.noAudio": "No audio file",
   "podcast.text.noCover": "No cover",
@@ -419,7 +423,7 @@
   "program.label.duration": "Duration (minutes)",
   "program.label.introductionVideo": "Introduction Video",
   "program.label.markIssueAs": "Mark as {status}",
-  "program.label.permissiontype": "選擇內容觀看權限",
+  "program.label.permissionType": "選擇內容觀看權限",
   "program.label.perpetualPlanType": "Perpetual Plan",
   "program.label.planDescription": "Plan Description",
   "program.label.planTitle": "Title",
@@ -480,7 +484,7 @@
   "promotion.label.constraint": "Constraint",
   "promotion.label.constraintAmount": "消費滿 {amount} 折抵",
   "promotion.label.create": "Create",
-  "promotion.label.disountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
+  "promotion.label.discountHelp": "折抵方式為比例時，額度範圍為 0 - 100",
   "promotion.label.exchangeItems": "Exchangeable Items",
   "promotion.label.exchangeItemsAmount": "Amount of Exchangeable Items",
   "promotion.label.forever": "Forever",
