[FEATURE] add timezone message

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -81,6 +81,7 @@
   "appointment.text.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
   "appointment.text.publishedNotation": "預約方案已經發佈，學生將能購買預約。",
   "appointment.text.selectStartedAt": "start time",
+  "appointment.text.timezone": "All the timings listed are in your timezone: {city} (GMT{timezone})",
   "appointment.text.unpublishedNotation": "預約方案未發佈，此方案並不會顯示在頁面上，學生也不能購買此方案。",
   "appointment.ui.addToCalendar": "Add to Calendar",
   "appointment.ui.close": "Close",
@@ -207,7 +208,6 @@
   "common.menu.promotionAdmin": "Promotion",
   "common.menu.salesAdmin": "Sales",
   "common.menu.voucherPlans": "Voucher Plans",
-  "common.preview": "預覽內容",
   "common.product.activityTicket": "Activity",
   "common.product.appointmentPlan": "Appointment",
   "common.product.card": "Card",
@@ -399,7 +399,6 @@
   "price.label.originalPrice": "Original Price",
   "price.label.perPeriods": "{amount} per {unit}",
   "price.label.second": "After",
-  "program-admin-page.header.dropdown.preview": "預覽簡介",
   "program.event.creatingBlock": "Creating Block",
   "program.event.editIssueFailed": "Edit issue failed",
   "program.label.allProgram": "All Program",
