[BUGFIX] improve styles of sales table

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -144,7 +144,7 @@
   "common.label.memberPage": "My Page",
   "common.label.month": "month",
   "common.label.name": "Name",
-  "common.label.nameAndEmail": "姓名和郵件地址",
+  "common.label.nameAndEmail": "Name / Email",
   "common.label.newPassword": "New Password",
   "common.label.newPasswordAgain": "new password again",
   "common.label.notMember": "Not a member?",
