--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -63,7 +63,7 @@
   "appointment.status.aboutToStart": "Sắp tổ chức",
   "appointment.status.available": "Được đặt hẹn",
   "appointment.status.enrolled": "Đã đặt hẹn",
-  "appointment.status.exlucded": "Đã đóng",
+  "appointment.status.excluded": "Đã đóng",
   "appointment.status.finished": "Đã kết thúc",
   "appointment.status.isPublished": "Đã đăng",
   "appointment.status.notPublished": "Chưa đăng",
@@ -83,6 +83,7 @@
   "appointment.text.selectStartedAt": "Chọn thời gian bắt đầu",
   "appointment.text.unpublishedNotation": "Kế hoạch đặt hẹn chưa đăng tải, kế hoạch sẽ không hiển thị trên trang, học viên không thể mua kế hoạch này",
   "appointment.ui.addToCalendar": "Thêm vào Calendar",
+  "appointment.ui.appointmentText": "{name} 已預約你的「{title}」",
   "appointment.ui.close": "Đóng",
   "appointment.ui.createPlan": "Tạo lập kế hoạch",
   "appointment.ui.editPeriod": "Giai đoạn chỉnh sửa",
@@ -91,8 +92,6 @@
   "appointment.ui.open": "Mở",
   "appointment.ui.single": "Một lần",
   "appointment.warning.repetitiveMeta": "※Lặp lại chu kỳ",
-  "appointmnet.ui.appointmentText": "{name} Đã hẹn「{title}」của bạn",
-  "commom.ui.exportOrderProduct": "Chi tiết phỏng vấn ",
   "common.event.loading": "Đang tải",
   "common.event.publishedSuccessfully": "Đăng bài thành công",
   "common.event.publishingFailed": "Đăng bài thất bại",
@@ -111,7 +110,7 @@
   "common.label.allProgramContent": "Tất cả các nội dung khóa học",
   "common.label.allProgramPlan": "Tất cả các kế hoạch đã theo dõi",
   "common.label.alreadyMember": "Đã là hội viên chưa?",
-  "common.label.baiscSettings": "Cài đặt cơ bản",
+  "common.label.basicSettings": "Cài đặt cơ bản",
   "common.label.cannotRecover": "Hành động này không thể hoàn tác ",
   "common.label.caption": "Phụ đề",
   "common.label.categoryItem": "Phân loại danh mục",
@@ -127,15 +126,25 @@
   "common.label.goToLogin": "Đi đến đăng nhập ",
   "common.label.holdingPoints": "Giữ điểm",
   "common.label.introduction": "Giới thiệu ",
+  "common.label.invoiceAddress": "發票地址",
+  "common.label.invoiceBuyerPhone": "發票電話",
+  "common.label.invoiceCarrier": "發票載具",
+  "common.label.invoiceDonationCode": "發票捐贈碼",
   "common.label.invoiceEmail": "Email hóa đơn",
+  "common.label.invoiceId": "發票編號",
   "common.label.invoiceName": "Tên hóa đơn",
   "common.label.invoicePhone": "Điện thoại hóa đơn",
+  "common.label.invoicePostCode": "發票郵遞區號",
+  "common.label.invoiceTarget": "發票對象",
+  "common.label.invoiceUniformNumber": "發票統編",
+  "common.label.invoiceUniformTitle": "發票抬頭",
   "common.label.isAppOwner": "Tôi là người quản lý",
   "common.label.lastLogin": "Lần đăng nhập trước",
   "common.label.memberLog": "Lịch sử hội viên",
   "common.label.memberPage": "Trang chủ của tôi",
   "common.label.month": "Tháng",
   "common.label.name": "姓名",
+  "common.label.nameAndEmail": "姓名 / Email",
   "common.label.newPassword": "Mật khẩu",
   "common.label.newPasswordAgain": "Nhập lại mật khẩu mới",
   "common.label.notMember": "Chưa phải là hội viên？",
@@ -172,7 +181,7 @@
   "common.label.publishSettings": "Thiết lập đăng bài",
   "common.label.resetPassword": "Làm lại mật khẩu",
   "common.label.roleAdmin": "Quản lý vai trò",
-  "common.label.roleSettigs": "Thiết lập vai trò",
+  "common.label.roleSettings": "Thiết lập vai trò",
   "common.label.salePriceEndTime": "Ngày chốt sale",
   "common.label.salesPlan": "Kế hoạch bán hàng",
   "common.label.selectInstructor": "Chọn giảng viên",
@@ -207,7 +216,6 @@
   "common.menu.promotionAdmin": "Quản lý chương trình khuyến mãi",
   "common.menu.salesAdmin": "Quản lý bán hàng",
   "common.menu.voucherPlans": "Kế hoạch voucher",
-  "common.preview": "Nội dung xem trước",
   "common.product.activityTicket": "Vé sự kiện",
   "common.product.appointmentPlan": "Đặt hẹn",
   "common.product.card": "Thẻ hội viên",
@@ -220,6 +228,7 @@
   "common.product.programPlan": "Kế hoạch khóa học",
   "common.product.projectPlan": "Kế hoạch dự án",
   "common.product.unknownType": "Chưa biết",
+  "common.status.expired": "過期",
   "common.status.notComplete": "Còn danh mục chưa hoàn thành",
   "common.status.orderFailed": "Thanh toán trả phí",
   "common.status.orderRefund": "Đã hoàn tiền",
@@ -282,15 +291,15 @@
   "common.text.sentResetPasswordMail": "Đã gửi email đặt lại mật khẩu",
   "common.text.shortDescriptionPlaceholder": "Tối đa 30 chữ",
   "common.text.successfullyResetPasswordNotation": "Đã làm lại mật khẩu mới, vui lòng đăng nhập lại trang chủ",
-  "common.text.totalActualSalse": "Tổng doanh thu thực tế {dollars} USD",
-  "common.text.totalActualSalseNotation": "Tổng doanh số - Chiết khấu đầu kỳ = Tổng doanh số thực tế",
+  "common.text.totalActualSales": "Tổng doanh thu thực tế {dollars} USD",
+  "common.text.totalActualSalesNotation": "Tổng doanh số - Chiết khấu đầu kỳ = Tổng doanh số thực tế",
   "common.text.totalCount": "Tổng cộng {count} ",
   "common.ui.add": "Thêm",
   "common.ui.addCategory": "ThêmPhân loại",
   "common.ui.addInstructor": "ThêmGiảng viên",
   "common.ui.addToCart": "Thêm vào giỏ hàng",
   "common.ui.back": "Về trang trước",
-  "common.ui.backToHompage": "Về trang chủ",
+  "common.ui.backToHomepage": "Về trang chủ",
   "common.ui.buyNow": "Mua ngay",
   "common.ui.cancel": "Hủy",
   "common.ui.cancelOrder": "Hủyđơn hàng",
@@ -307,6 +316,7 @@
   "common.ui.exportOrder": "Xuất thông tin",
   "common.ui.exportOrderDiscount": "Chi tiết giảm giá",
   "common.ui.exportOrderLog": "Xuất đơn hàng",
+  "common.ui.exportOrderProduct": "訂單明細",
   "common.ui.facebookLogin": "Đăng nhập/ Đăng ký Facebook",
   "common.ui.goTo": "Đến phần điền thông tin",
   "common.ui.goToCart": "Đến giỏ hàng",
@@ -330,7 +340,7 @@
   "common.ui.search": "Tìm kiếm",
   "common.ui.sendEmailAgain": "Gửi lại lần nữa",
   "common.ui.trial": "Xem thử",
-  "creator.label.creatorAppointemnts": "Đặt lịch hẹn",
+  "creator.label.creatorAppointments": "Đặt lịch hẹn",
   "creator.label.creatorPodcast": "Podcast",
   "creator.label.creatorPrograms": "Mở khóa học",
   "error.data.fetch": "Bị lỗi",
@@ -362,7 +372,6 @@
   "notification.term.notification": "Thông báo",
   "notification.ui.checkNotifications": "Xem thông báo",
   "notification.ui.markAllAsRead": "Tất cả đánh dấu là đã đọc",
-  "paodast.text.abstractLimit": "Giới hạn 100 chữ",
   "podcast.label.description": "Mô tả nội dụng",
   "podcast.label.duration": "Thời lượng nội dung (phút)",
   "podcast.label.plan": "Kế hoạch",
@@ -380,6 +389,7 @@
   "podcast.term.podcastAbstract": "Tóm tắt ",
   "podcast.term.podcastCover": "Ảnh bìa Podcast",
   "podcast.term.podcastPlan": "Đăng ký Kế hoạch Podcast",
+  "podcast.text.abstractLimit": "限 100 字",
   "podcast.text.audioFileTips": "Định dạng đề xuất：MP3\n Giới hạn dụng lượng: 5MB",
   "podcast.text.noAudio": "Chưa đăng tải Audio",
   "podcast.text.noCover": "Chưa đăng tải ảnh bìa",
@@ -399,7 +409,6 @@
   "price.label.originalPrice": "Giá gốc",
   "price.label.perPeriods": "Mỗi {amount} {unit}",
   "price.label.second": "Bắt đầu từ đợt 2",
-  "program-admin-page.header.dropdown.preview": "Xem trước giới thiệu",
   "program.event.creatingBlock": "Thêm khối",
   "program.event.editIssueFailed": "Vấn đề không thể chỉnh sửa",
   "program.label.allProgram": "Toàn bộ khóa học",
@@ -415,7 +424,7 @@
   "program.label.duration": "Thời lượng nội dung (phút)",
   "program.label.introductionVideo": "Giới thiệu video",
   "program.label.markIssueAs": "Đánh dấu là {status}",
-  "program.label.permissiontype": "Chọn quyền xem nội dung",
+  "program.label.permissionType": "Chọn quyền xem nội dung",
   "program.label.perpetualPlanType": "Thanh toán một lận",
   "program.label.planDescription": "Mô tả kế hoạch",
   "program.label.planTitle": "Kế hoạch Tên",
@@ -476,7 +485,7 @@
   "promotion.label.constraint": "Nhu cầu tiêu dùng",
   "promotion.label.constraintAmount": "Tiêu dùng đến mức giảm giá  {amount} ",
   "promotion.label.create": "Thêm mới",
-  "promotion.label.disountHelp": "Khi phương thức chiết khấu tỷ lệ thuận, phạm vi hạn ngạch là 0-100F",
+  "promotion.label.discountHelp": "Khi phương thức chiết khấu tỷ lệ thuận, phạm vi hạn ngạch là 0-100F",
   "promotion.label.exchangeItems": "Danh mục quy đổi",
   "promotion.label.exchangeItemsAmount": "Số lượng danh mục quy đổi",
   "promotion.label.forever": "Không có thời hạn sử dụng",
