[BUGFIX] expired translation

--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -81,6 +81,7 @@
   "appointment.text.notCompleteNotation": "Vui lòng điền thông tin cần thiết，sau khi hoàn tất có thể đăng tải",
   "appointment.text.publishedNotation": "Kế hoạch đặt hẹn đã đăng tải, học viên có thể đặt hẹn",
   "appointment.text.selectStartedAt": "Chọn thời gian bắt đầu",
+  "appointment.text.timezone": "時間以 {city} (GMT{timezone}) 顯示",
   "appointment.text.unpublishedNotation": "Kế hoạch đặt hẹn chưa đăng tải, kế hoạch sẽ không hiển thị trên trang, học viên không thể mua kế hoạch này",
   "appointment.ui.addToCalendar": "Thêm vào Calendar",
   "appointment.ui.appointmentText": "{name} 已預約你的「{title}」",
@@ -228,7 +229,7 @@
   "common.product.programPlan": "Kế hoạch khóa học",
   "common.product.projectPlan": "Kế hoạch dự án",
   "common.product.unknownType": "Chưa biết",
-  "common.status.expired": "過期",
+  "common.status.expired": "到期",
   "common.status.notComplete": "Còn danh mục chưa hoàn thành",
   "common.status.orderFailed": "Thanh toán trả phí",
   "common.status.orderRefund": "Đã hoàn tiền",
