[FEATURE] add language selector

--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -140,6 +140,7 @@
   "common.label.invoiceUniformNumber": "Invoice Uniform Number",
   "common.label.invoiceUniformTitle": "Invoice Uniform Title",
   "common.label.isAppOwner": "Administrator",
+  "common.label.languages": "顯示語系",
   "common.label.lastLogin": "Last Login",
   "common.label.memberLog": "Log",
   "common.label.memberPage": "My Page",
@@ -273,6 +274,7 @@
   "common.term.shortDescription": "Short Description",
   "common.term.speciality": "Speciality",
   "common.term.startedAt": "Start Time",
+  "common.term.supportedLanguages": "選擇顯示於那個語系",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
