--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -140,6 +140,7 @@
   "common.label.invoiceUniformNumber": "發票統編",
   "common.label.invoiceUniformTitle": "發票抬頭",
   "common.label.isAppOwner": "Tôi là người quản lý",
+  "common.label.languages": "顯示語系",
   "common.label.lastLogin": "Lần đăng nhập trước",
   "common.label.memberLog": "Lịch sử hội viên",
   "common.label.memberPage": "Trang chủ của tôi",
@@ -273,6 +274,7 @@
   "common.term.shortDescription": "Tóm tắt giới thiệu",
   "common.term.speciality": "Sở trường",
   "common.term.startedAt": "Thời gian bắt đầu",
+  "common.term.supportedLanguages": "選擇顯示於那個語系",
   "common.term.teachingAssistant": "Trợ giảng",
   "common.term.title": "Tên",
   "common.term.unknownProduct": "Phân loại chưa biết",
