--- a/src/translations/locales/en.json
+++ b/src/translations/locales/en.json
@@ -274,7 +274,7 @@
   "common.term.shortDescription": "Short Description",
   "common.term.speciality": "Speciality",
   "common.term.startedAt": "Start Time",
-  "common.term.supportedLanguages": "選擇顯示於那個語系",
+  "common.term.supportedLanguages": "選擇顯示於哪個語系",
   "common.term.teachingAssistant": "Teaching Assistant",
   "common.term.title": "Title",
   "common.term.unknownProduct": "Unknown Product",
