--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -274,7 +274,7 @@
   "common.term.shortDescription": "Tóm tắt giới thiệu",
   "common.term.speciality": "Sở trường",
   "common.term.startedAt": "Thời gian bắt đầu",
-  "common.term.supportedLanguages": "選擇顯示於那個語系",
+  "common.term.supportedLanguages": "選擇顯示於哪個語系",
   "common.term.teachingAssistant": "Trợ giảng",
   "common.term.title": "Tên",
   "common.term.unknownProduct": "Phân loại chưa biết",
